<resources>
    <string name="app_name">AndroidFinalProject</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_idea">Ideas</string>
    <string name="title_people">People</string>
    <string name="title_profile">Profile</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">FullscreenActivity</string>


    <string name="registerButton">Register</string>
    <string name="searchButton">Search</string>
    <string name="followButton">Follow</string>
    <string name="loginButton">Login</string>
    <string name="registerIdea">Register New Idea</string>
    <string name="searchUser">Search User to Follow</string>
    <string name="searchIdea">Search Idea to Add</string>
    <string name="title_activity_splash">SplashActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="hi">Hi there!</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_ideatitle">Idea Title</string>
    <string name="prompt_ideaContext">Idea Context</string>
    <string name="prompt_ideaContent">Idea Content</string>
    <string name="prompt_firstName">First Name</string>
    <string name="prompt_lastName">Last Name</string>
    <string name="prompt_location">Country</string>
    <string name="prompt_dob">Date of Birth(dd/mm/yyy)</string>

    <string name="prompt_username">username</string>
    <string name="forgotpassword">forgot Username/Password ?</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>