<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_idea">

    <fragment
        android:id="@+id/navigation_idea"
        android:name="ab.lasalle.androidfinalproject.ui.fragments.ideas.IdeasFragment"
        android:label="@string/title_idea"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="ab.lasalle.androidfinalproject.ui.fragments.people.PeopleFragment"
        android:label="@string/title_people"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="ab.lasalle.androidfinalproject.ui.fragments.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_notifications" />
</navigation>